<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.brettbeatty.roc.activities.EditPassActivity">

    <com.brettbeatty.roc.views.NavbarView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/your_pass" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass_name"
        android:textAppearance="?android:textAppearanceSmall" />

    <EditText
        android:id="@+id/pass_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions" />

    <Button
        android:id="@+id/save_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_pass" />

    <Button
        android:id="@+id/delete_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_pass" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>
